[tool.poetry]
name = "adeptly"
version = "0.1.0"
description = "Python 3.6+ library for adaptive DQN agents in real-time games"
authors = ["Bischoff, Silas <silas.bischoff@googlemail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sbischoff-ai/adeptly"
keywords = ["ai", "agent", "dqn", "real-time", "games"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Development Status :: 1 - Planning"
]
packages = [{ include = "adeptly" }]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.13"
keras = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pydocstyle = "^3.0"
pytest-cov = "^2.7"
mypy = "^0.701.0"
pre-commit = "^1.16"
pydoc-markdown = "^2.0"
mkdocs-material = "^4.3"
pylint-fail-under = "^0.1.0"

[tool.black]
line-length = 119
target_version = ['py36']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
